--- a/src/components/NewTransactionModal/NewTransactionModal.module.css
+++ b/src/components/NewTransactionModal/NewTransactionModal.module.css
@@ -65,3 +65,33 @@
   cursor: pointer;
   color: var(--gray-500);
 }
+
+.transactionType {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+  margin-top: 0.5rem;
+}
+
+.transactionTypeButton {
+  background: var(--gray-700);
+  padding: 1rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+
+  border-radius: 6px;
+  cursor: pointer;
+  border: 0;
+  color: var(--gray-300);
+
+  svg.income {
+    color: var(--green-300);
+  }
+
+  svg.outcome {
+    color: var(--red-300);
+  }
+}
