--- a/src/components/NewTransactionModal/NewTransactionModal.module.css
+++ b/src/components/NewTransactionModal/NewTransactionModal.module.css
@@ -94,4 +94,27 @@
   svg.outcome {
     color: var(--red-300);
   }
+
+  &[data-state="unchecked"]:hover {
+    background: var(--gray-600);
+    transition: background-color 0.2s;
+  }
+
+  &[data-state="checked"].income {
+    color: var(--white);
+    background: var(--green-500);
+
+    svg {
+      color: var(--white);
+    }
+  }
+
+  &[data-state="checked"].outcome {
+    color: var(--white);
+    background: var(--red-500);
+
+    svg {
+      color: var(--white);
+    }
+  }
 }
