--- a/src/pages/components/SearchForm/SearchForm.module.css
+++ b/src/pages/components/SearchForm/SearchForm.module.css
@@ -8,6 +8,7 @@
     border: 0;
     background: var(--gray-900);
     padding: 1rem;
+    color: var(--gray-100);
 
     &::placeholder {
       color: var(--gray-500);
@@ -26,12 +27,18 @@
     color: var(--green-300);
     font-weight: bold;
     border-radius: 6px;
+    cursor: pointer;
 
-    &:hover {
-    background: var(--green-500);
-    border-color: var(--green-500);
-    color: var(--white);
-    transition: background-color 0.2s, color 0.2s, border-color 0.2s;
+    &:disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
+    }
+
+    &:not(:disabled):hover {
+      background: var(--green-500);
+      border-color: var(--green-500);
+      color: var(--white);
+      transition: background-color 0.2s, color 0.2s, border-color 0.2s;
     }
   }
 }
